<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">鹰管家</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 异常消息 -->
    <string name="http_status_code_error">http状态异常</string>
    <string name="http_exception_error">网络连接不正常，请检查网络后重试</string>
    <string name="socket_exception_error">套接字异常</string>
    <string name="network_not_connected">没有网络连接</string>
    <string name="xml_parser_failed">xml解析异常</string>
    <string name="io_exception_error">IO异常</string>
    <string name="app_run_code_error">程序运行异常</string>
    <string name="loading">加载中</string>
    <string name="load_full">加载完毕</string>
    <string name="load_more">加载更多</string>
    <string name="load_empty">暂无数据</string>
    <string name="loading_error">加载错误</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <!-- Locate -->
    <string name="locate_baidumap_initerror">初始化错误</string>
    <string name="locate_net_work_error">对不起网络错误</string>
    <string name="locate_serach_input_error">输入正确的检索条件</string>
    <string name="locate_bind_success">绑定成功</string>
    <string name="locate_unbind">与服务器已经解绑</string>
    <string name="login_ing">登录中</string>
    <string name="sending">发送中</string>
    <string name="obtaining">获取中</string>
    <string name="xzd_init_user_faild">初始化用户失败</string>
    <string name="zxd_no_network">网络连接不正常，请检查网络后重试</string>
    <string name="xzd_no_login">当前未登录</string>
    <string name="xzd_choose_noting">为选择任何条目</string>
    <string name="sales_man_name">业务员:%s</string>
    <string name="visit_date">最近拜访:%s</string>
    <string name="input_can_not_be_null">对不起,输入不能为空</string>
    <string name="saler_name">业务员名称</string>
    <string name="custum_name">客户名称</string>
    <string name="visit_detail">拜访详情</string>
    <string name="mark_content">点评内容</string>
    <string name="touch_edit">点击编辑</string>
    <string name="single_price">单价:%.2f元</string>
    <string name="total_price">总价:%.2f元</string>
    <string name="group_edit">分组管理</string>

</resources>