<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/ca_selector_listitem_first"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:paddingLeft="2dip" >

            <TextView
                android:id="@+id/saler_name_title"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:text="@string/saler_name"
                android:textSize="16sp" />

            <View
                android:id="@+id/xzd_v_l1"
                android:layout_width="0.5dip"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/saler_name_title"
                android:background="@color/black" />

            <TextView
                android:id="@+id/saler_name_content"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/xzd_v_l1"
                android:button="@null"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="3dip"
                android:paddingRight="10dip"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/ca_selector_listitem_content"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:paddingLeft="2dip" >

            <TextView
                android:id="@+id/custum_name_title"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:text="@string/custum_name"
                android:textSize="16sp" />

            <View
                android:id="@+id/xzd_v_l2"
                android:layout_width="0.5dip"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/custum_name_title"
                android:background="@color/black" />

            <TextView
                android:id="@+id/custum_name_content"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/xzd_v_l2"
                android:button="@null"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="3dip"
                android:paddingRight="10dip"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/ca_selector_listitem_content"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:paddingLeft="2dip" >

            <TextView
                android:id="@+id/visit_detail_title"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:text="@string/visit_detail"
                android:textSize="16sp" />

            <View
                android:id="@+id/xzd_v_l3"
                android:layout_width="0.5dip"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/visit_detail_title"
                android:background="@color/black" />

            <TextView
                android:id="@+id/visit_detail_content"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/xzd_v_l3"
                android:button="@null"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="3dip"
                android:paddingRight="10dip"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/ca_selector_listitem_last"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:paddingLeft="2dip" >

            <TextView
                android:id="@+id/mark_content_title"
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:text="@string/mark_content"
                android:textSize="16sp" />

            <View
                android:id="@+id/xzd_v_l4"
                android:layout_width="0.5dip"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/mark_content_title"
                android:background="@color/black" />

            <EditText
                android:id="@+id/mark_content_content"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/xzd_v_l4"
                android:background="@null"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/touch_edit"
                android:paddingLeft="3dip"
                android:paddingRight="10dip"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>